--- a/.github/workflows/update-readme-table.yml
+++ b/.github/workflows/update-readme-table.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main  # Run on pushes to the main branch
 
+permissions:
+  contents: write
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest
