Refactored the folders and fixed auto update read me

--- a/.github/workflows/update-readme-table.yml
+++ b/.github/workflows/update-readme-table.yml
@@ -3,7 +3,7 @@ name: Update Progress Table in README
 on:
   push:
     branches:
-      - main  # Run on pushes to the main branch
+      - main
 
 permissions:
   contents: write
