--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: [Bug bounty guide]
-description: [Bug bounty guide with notes, ctfs, labs and references.]
+description: [Your search ends here!!]
