--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@
 # plugins:
 # - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [Bug bounty guide]
+title: [Bug bounty notes]
 description: [The hacker's dictionary]
