--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,12 @@
 # - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
+# show_downloads: [false]
+
+
 title: [Bug bounty notes]
 description: [The hacker's dictionary]
